move callbackFunc to be a field of ExcelDataSheet